kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: horizen-network
  labels:
    name: horizen-network
    environment: production
