kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: horizen-ingress
  namespace: horizen-network
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rate-limit: "100"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - horizen-network.com
    - www.horizen-network.com
    - druid.horizen-network.com
    - geniess.horizen-network.com
    secretName: horizen-tls
  rules:
  - host: horizen-network.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
  - host: www.horizen-network.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
  - host: druid.horizen-network.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: druid-router
            port:
              number: 8888
  - host: geniess.horizen-network.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
